--- a/changelog.html
+++ b/changelog.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Changelog - Google Apps Script Backup</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css">
-  <style>
-    body { padding: 2rem; }
-    main { max-width: 720px; margin: 0 auto; }
-    h1 { margin-bottom: 1.5rem; }
-    article { margin-bottom: 2rem; }
-    .version { font-weight: 600; color: #1a73e8; }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 </head>
 <body>
-  <main class="container">
-    <h1>Changelog</h1>
 
-    <article>
-      <h3 class="version">Version 1.0</h3>
-      <p><strong>November 12, 2025</strong></p>
+  <main class="container">
+    <header>
+      <h1>Google Apps Script Backup - Changelog</h1>
+    </header>
+
+    <section>
+      <h4>Version 1.0 (November 12, 2025)</h4>
       <ul>
         <li>Initial release of Google Apps Script Backup.</li>
-        <li>One-click backup of Apps Script projects as ZIP files.</li>
-        <li>Download to device or email to self/other address.</li>
-        <li>Custom backup name and timestamped filenames.</li>
-        <li>Secure Google OAuth2 sign-in with silent re-auth.</li>
-        <li>Auto-detects current project in script.google.com.</li>
-        <li>Settings sync across devices via chrome.storage.sync.</li>
-        <li>Clean, Google-inspired UI with smooth transitions.</li>
+        <li>One-click backup of Apps Script projects as downloadable ZIP files.</li>
+        <li>Download to device or email to self/other address via Gmail API.</li>
+        <li>Custom backup name and timestamped filenames (e.g., <code>MyProject backup Nov12_2025_1_46PM.zip</code>).</li>
+        <li>Secure Google OAuth2 sign-in with silent re-authentication.</li>
+        <li>Auto-detects current project in <code>script.google.com</code> editor.</li>
+        <li>Settings sync across devices via <code>chrome.storage.sync</code>.</li>
+        <li>Clean, Google-inspired UI with smooth transitions and responsive layout.</li>
+        <li>Full privacy-first design — no data collection, no third-party analytics.</li>
       </ul>
-    </article>
+    </section>
   </main>
+
+  <footer class="container">
+    <p style="text-align: center; color: #666; font-size: 0.9rem; margin-top: 2rem;">
+      Built for developers who value their code.
+    </p>
+  </footer>
+
 </body>
 </html>
