--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,52 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Pico CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-  <style>
-    body { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
-    h1, h2 { text-align: center; }
-    a { word-break: break-all; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Google Apps Script Backup</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 </head>
 <body>
 
-<h1>Privacy Policy</h1>
+  <main class="container">
+    <header>
+      <h1>Google Apps Script Backup Chrome Extension - Privacy Policy</h1>
+    </header>
 
-<h2>Introduction</h2>
-<p>The Google Apps Script Backup extension is designed to help you backup your Google Apps Script projects as downloadable ZIP files. We are committed to protecting your privacy and ensuring transparency about how this extension handles your data.</p>
+    <section>
+      <h4>Introduction</h4>
+      <p>
+        Google Apps Script Backup is a Chrome extension designed to help you securely back up your Google Apps Script projects as downloadable ZIP files. We are committed to protecting your privacy and ensuring transparency about how this extension handles your data.
+      </p>
+    </section>
 
-<h2>Non-Affiliation with Google</h2>
-<p>The extension is not a Google product and is not affiliated with or endorsed by Google or the Google Apps Script platform. All modifications to the Google Apps Script website (<a href="https://script.google.com/">https://script.google.com/</a>) are cosmetic, applied locally on your device, and are fully reversible by uninstalling the extension or removing your settings. The extension allows you to backup your projects by fetching content via the Google Apps Script API and creating local ZIP files, while preserving the content you want to see.</p>
+    <section>
+      <h4>Non-Affiliation with Google</h4>
+      <p>
+        Google Apps Script Backup is not a Google product and is not affiliated with or endorsed by Google or the Google Apps Script platform. All interactions with the Google Apps Script editor (<a href="https://script.google.com/">https://script.google.com/</a>) are performed via official Google APIs. The extension allows you to download and email your project files, with all processing done locally on your device.
+      </p>
+    </section>
 
-<h2>Data Collection and Usage</h2>
-<p>The extension does not collect, store, or transmit any personal data beyond what is required for authentication and backup functionality. The extension operates entirely on your device and uses the following:</p>
-<ul>
-  <li><strong>Local Storage:</strong> The extension uses Chrome’s <code>chrome.storage.sync</code> API to store your backup preferences (e.g., download options, email addresses, custom names) locally on your device and synced across devices. This data is not sent to any external servers.</li>
-  <li><strong>Google OAuth2:</strong> The extension uses Google’s OAuth2 for authentication to access the Apps Script API. Your Google email is fetched once during login for email delivery and stored in memory only.</li>
-  <li><strong>Project Data:</strong> When backing up, the extension fetches your project files via the Apps Script API and creates a local ZIP file. No project data is stored or transmitted beyond the immediate backup process.</li>
-  <li><strong>Email Delivery:</strong> If you choose to email backups, the extension uses the Gmail API to send the ZIP file to the specified email addresses (your Google account or a custom email). The email content is generated locally and sent directly via Google's servers.</li>
-</ul>
+    <section>
+      <h4>Data Collection and Usage</h4>
+      <p>
+        The extension does not collect, store, or transmit any personal data beyond what is required for authentication and backup functionality. The extension operates primarily on your device and uses the following:
+      </p>
+      <ul>
+        <li><strong>Local & Synced Storage:</strong> The extension uses Chrome’s <code>chrome.storage.sync</code> API to store your backup preferences (e.g., download option, email self/other, custom name) locally and synced across your signed-in devices. This data is not sent to any external servers.</li>
+        <li><strong>Google OAuth2:</strong> The extension uses Google’s OAuth2 to authenticate and access the Apps Script and Gmail APIs. Your Google email is fetched once during login for display and optional email delivery, and is stored only in memory.</li>
+        <li><strong>Project Data:</strong> When backing up, the extension fetches your project files via the official Apps Script API and creates a ZIP file locally. No project data is stored or transmitted beyond the immediate backup process.</li>
+        <li><strong>Email Delivery:</strong> If enabled, the extension uses the Gmail API to send the ZIP file to your Google account or a custom email address. The email is generated and sent directly via Google’s servers.</li>
+      </ul>
+    </section>
 
-<h2>Permissions</h2>
-<p>The extension requires the following permissions to function:</p>
-<ul>
-  <li><strong>identity:</strong> For Google OAuth2 authentication to access Apps Script and Gmail APIs.</li>
-  <li><strong>storage:</strong> To save your backup preferences locally and synced across devices.</li>
-  <li><strong>activeTab, scripting, tabs:</strong> To inject the content script into script.google.com for project detection.</li>
-  <li><strong>Host Permissions:</strong> To access Google APIs for project fetching, email sending, and user info.</li>
-</ul>
+    <section>
+      <h4>Permissions</h4>
+      <p>
+        The extension requires the following permissions to function:
+      </p>
+      <ul>
+        <li><strong>identity:</strong> For Google OAuth2 authentication to access Apps Script and Gmail APIs.</li>
+        <li><strong>storage:</strong> To save and sync your backup preferences across devices.</li>
+        <li><strong>activeTab, scripting, tabs:</strong> To detect the current project in the Apps Script editor.</li>
+        <li><strong>Host Permissions:</strong> To access Google APIs for project fetching, user info, and email sending.</li>
+      </ul>
+    </section>
 
-<h2>Third-Party Services</h2>
-<p>The extension does not use any third-party services, analytics, or tracking tools. All functionality is self-contained within the extension and Google's APIs.</p>
+    <section>
+      <h4>Third-Party Services</h4>
+      <p>
+        The extension does not use any third-party services, analytics, or tracking tools. All functionality is self-contained within the extension and Google’s official APIs.
+      </p>
+    </section>
 
-<h2>Data Security</h2>
-<p>Your project files, settings, and email addresses are stored locally via Chrome's storage API and are as secure as your device. Authentication tokens are cached by Chrome's identity API and revoked on logout. We do not have access to this data, and it is not shared with any external parties beyond Google's APIs for backup and email delivery.</p>
+    <section>
+      <h4>Data Security</h4>
+      <p>
+        Your project files, settings, and email addresses are stored locally via Chrome’s storage API and are as secure as your device. Authentication tokens are managed securely by Chrome’s identity API and revoked on logout. We do not have access to this data, and it is not shared with any external parties beyond Google’s APIs for backup and email delivery.
+      </p>
+    </section>
 
-<h2>Changes to This Privacy Policy</h2>
-<p>We may update this Privacy Policy from time to time to reflect changes in the extension's functionality or legal requirements. The latest version will always be available at this URL. This policy was last updated on November 12, 2025.</p>
+    <section>
+      <h4>Changes to This Privacy Policy</h4>
+      <p>
+        We may update this Privacy Policy from time to time to reflect changes in the extension’s functionality or legal requirements. The latest version will always be available at this URL. This policy was last updated on November 12, 2025.
+      </p>
+    </section>
+  </main>
+
+  <footer class="container">
+  </footer>
 
 </body>
 </html>
